2003-08-19  Not Zed  <NotZed@Ximian.com>

	* mail-format.c (write_date): Added translation for day and
	localtime strings.  Also removed the tz_zone stuff, and just use
	'localtime' always.

2003-08-15  David Woodhouse  <dwmw2@infradead.org>

	* mail-format.c (write_date): Show date in localtime too.

2003-08-19  Harry Lu  <harry.lu@sun.com>

	** For #45348

	* mail-display.c (mail_display_render): Change "%P" to "%p" so 
	that strftime() can work under solaris.

2003-08-13  Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>
	
	* e-searching-tokenizer.c (searcher_next_token): Fix for 45818 (
	i18n mail messages search only produces '[?]'). Now multibyte
	character selection works correctly. But due to associated gtkhtml
	bug, the find button functionallity for multibyte characters is
	broken.

2003-08-12  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-tools.h: Removed unused function prototype.

2003-08-11  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-session.c (remove_timeout): Removed.
	(register_timeout): Removed.

2003-08-05  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (handle_multipart_encrypted): Updated for
	CamelMimePart::content_type changes.

	* mail-ops.c (save_part_save): Use
	camel_data_wrapper_decode_to_stream() here.

	* mail-display.c (drag_data_get_cb): Updated for
	CamelMimePart::content_type changes.
	(do_attachment_header): Same.

2003-07-31  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (mail_format_raw_message): Updated to pass FALSE
	as the 'decode' param to
	mail_format_data_wrapper_write_to_stream().
	(mail_format_data_wrapper_write_to_stream): Now takes a boolean
	arg telling whether to decode or not. Also reworked the charset
	logic now that camel doesn't handle this for us any longer.
	(mail_format_get_data_wrapper_text): Updated.
	(handle_text_plain): Same.
	(handle_text_enriched): Here too.

	* mail-display.c (do_attachment_header): Call decode_to_stream
	here instead of write_to_stream.